--- a/dorfladen-frontend/src/app/modals/confirmation-modal/confirmation-modal.component.html
+++ b/dorfladen-frontend/src/app/modals/confirmation-modal/confirmation-modal.component.html
@@ -1,7 +1,7 @@
 <article>
   <header>Vielen Dank für deine Bestellung</header>
   <!-- Grid -->
-  <img src="assets/barcode.png">
+  <canvas #barcode></canvas>
 
   <p>Bitte bezahlen Sie an der Kasse oder wählen Sie 'Bei Abholung bezahlen' aus um an den entsprechenden Tagen zu bezahlen.</p>
   <footer class="flex space-between">
