Removed demo msg after timeout

--- a/dorfladen-frontend/src/app/app.component.html
+++ b/dorfladen-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mark>Dies ist eine DEMO. Es können keine Bestellungen aufgegeben werden!</mark>
+<mark #demo>Dies ist eine DEMO. Es können keine Bestellungen aufgegeben werden!</mark>
 <div class="header">
   <div class="container flex baseline">
     <img src="assets/logo.svg" />
