--- a/dorfladen-frontend/src/app/week-select/week-select.component.scss
+++ b/dorfladen-frontend/src/app/week-select/week-select.component.scss
@@ -9,3 +9,7 @@ a:last-of-type {
   border-top-right-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
 }
+
+.date {
+  margin-left: 1rem;
+}
