--- a/dorfladen-frontend/src/app/order-item/order-item.component.html
+++ b/dorfladen-frontend/src/app/order-item/order-item.component.html
@@ -2,9 +2,8 @@
   <div><strong>{{item?.description}}</strong></div>
   <div class="flex count-ctrl">
     <div class="ctext">{{item?.price | price}}</div>
-    <button (click)="add(-1)"><em class="fas fa-minus"></em></button>
-    <input type="number" [(ngModel)]="item.count" (keyup)="countUpdated()">
-    <button (click)="add(1)"><em class="fas fa-plus"></em></button>
+    <dlb-number-input [(value)]="item.count" [min]="0"></dlb-number-input>
+    <div class="grow"></div>
     <div class="ctext">{{item.price * (item.count || 0) | price }}</div>
   </div>
 </div>
