--- a/dorfladen-frontend/src/app/order-item/order-item.component.scss
+++ b/dorfladen-frontend/src/app/order-item/order-item.component.scss
@@ -1,7 +1,13 @@
 .count-ctrl {
+  min-width: 20rem;
   .ctext {
     margin-left: 8px;
     margin-right: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
     white-space: nowrap;
+  }
+  .price {
+    margin-right: 1.5rem;
   }
 }
