Added abo days to calculation

--- a/dorfladen-frontend/src/app/selection/selection.component.html
+++ b/dorfladen-frontend/src/app/selection/selection.component.html
@@ -15,6 +15,7 @@
     <div>Gesammt</div>
     <div></div>
     <div><span *ngIf="totalCount()">{{totalCount()}} stk.</span></div>
+    <div *ngIf="orderService.days.length > 1"><span *ngIf="totalCount()">x {{orderService.days.length}} tage</span></div>
     <div><u>{{totalPrice() | price}}</u></div>
   </div>
   <div class="flex">
