--- a/dorfladen-frontend/src/app/order-item/order-item.component.html
+++ b/dorfladen-frontend/src/app/order-item/order-item.component.html
@@ -1,4 +1,4 @@
-<div class="flex space-between" *ngIf="item">
+<div class="flex wrap-row space-between" *ngIf="item">
   <div><strong>{{item?.description}}</strong></div>
   <div class="flex count-ctrl">
     <div class="ctext price">{{item?.price | price}}</div>
