Turned off auto complete

--- a/dorfladen-frontend/src/app/modals/order-modal/order-modal.component.html
+++ b/dorfladen-frontend/src/app/modals/order-modal/order-modal.component.html
@@ -1,32 +1,34 @@
-<article [formGroup]="orderForm">
+<article>
   <header>Bestellung abschließen</header>
   <!-- Grid -->
-  <div class="grid">
+  <form [formGroup]="orderForm" autocomplete="off">
+    <div class="grid">
 
-    <!-- Markup example 1: input is inside label -->
-    <label for="firstname">
-      Vorname
-      <input type="text" id="firstname" name="firstname" placeholder="Vorname" formControlName="firstName" dlbValid required>
-    </label>
+      <!-- Markup example 1: input is inside label -->
+      <label for="firstname">
+        Vorname
+        <input type="text" id="firstname" name="firstname" placeholder="Vorname" formControlName="firstName" dlbValid required>
+      </label>
 
-    <label for="lastname">
-      Nachname
-      <input type="text" id="lastname" name="lastname" placeholder="Nachname" formControlName="lastName" dlbValid required>
-    </label>
+      <label for="lastname">
+        Nachname
+        <input type="text" id="lastname" name="lastname" placeholder="Nachname" formControlName="lastName" dlbValid required>
+      </label>
 
-  </div>
+    </div>
 
-  <!-- Markup example 2: input is after label -->
-  <label for="email" class="optional">Email Adresse</label>
-  <input type="email" id="email" name="email" formControlName="email" dlbValid placeholder="Email Adresse">
-  <label for="order-note" class="optional">Notiz</label>
-  <textarea id="order-note" name="order-note" formControlName="note" dlbValid placeholder="Notiz"></textarea>
-  <fieldset>
-    <label for="terms">
-      <input type="checkbox" id="terms" name="terms" dlbValid formControlName="privacy">
-      Ich stimme den Datenschutzbedingungen zu
-    </label>
-  </fieldset>
+    <!-- Markup example 2: input is after label -->
+    <label for="email" class="optional">Email Adresse</label>
+    <input type="email" id="email" name="email" formControlName="email" dlbValid placeholder="Email Adresse">
+    <label for="order-note" class="optional">Notiz</label>
+    <textarea id="order-note" name="order-note" formControlName="note" dlbValid placeholder="Notiz"></textarea>
+    <fieldset>
+      <label for="terms">
+        <input type="checkbox" id="terms" name="terms" dlbValid formControlName="privacy">
+        Ich stimme den Datenschutzbedingungen zu
+      </label>
+    </fieldset>
+  </form>
   <footer>
     <div class="grid">
       <button role="button" class="secondary" (click)="close(undefined)">Abbrechen</button>
