--- a/dorfladen-frontend/src/app/number-input/number-input.component.html
+++ b/dorfladen-frontend/src/app/number-input/number-input.component.html
@@ -1,5 +1,5 @@
 <div class="input-container">
   <button (click)="add(-1)"><em class="fas fa-minus"></em></button>
-  <input type="number" [(ngModel)]="value">
+  <input type="number" [(ngModel)]="value" autocomplete="off">
   <button (click)="add(1)"><em class="fas fa-plus"></em></button>
 </div>
