--- a/dorfladen-frontend/src/app/modals/order-modal/order-modal.component.html
+++ b/dorfladen-frontend/src/app/modals/order-modal/order-modal.component.html
@@ -18,8 +18,8 @@
     </div>
 
     <!-- Markup example 2: input is after label -->
-    <label for="email" class="optional">Email Adresse</label>
-    <input type="email" id="email" name="email" formControlName="email" dlbValid placeholder="Email Adresse">
+    <label for="email-field" class="optional">Email Adresse</label>
+    <input type="email" id="email-field" name="email-field" formControlName="email" dlbValid placeholder="Email Adresse">
     <label for="order-note" class="optional">Notiz</label>
     <textarea id="order-note" name="order-note" formControlName="note" dlbValid placeholder="Notiz"></textarea>
     <fieldset>
