--- a/dorfladen-frontend/src/app/app.component.html
+++ b/dorfladen-frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="container flex baseline">
     <img (dblclick)="admin = !admin" src="assets/logo.svg" />
     <h1 [class.admin]="admin">Backwarenbestellung</h1>
-    <div class="breadcrumb">
+    <div class="breadcrumb grow">
       <span *ngIf="stage === 0">Datumsauswahl</span>
       <span *ngIf="stage !== 0">
         <a routerLink="/date">Datumsauswahl</a>
@@ -11,6 +11,7 @@
         <span>Warenauswahl</span>
       </span>
     </div>
+    <dlb-timer></dlb-timer>
   </div>
 </div>
 <div class="spacer-top"></div>
