--- a/dorfladen-frontend/src/app/app.component.html
+++ b/dorfladen-frontend/src/app/app.component.html
@@ -1,17 +1,28 @@
 <mark #demo>Dies ist eine DEMO. Es können keine Bestellungen aufgegeben werden!</mark>
 <div class="header">
-  <div class="container flex baseline">
-    <img (dblclick)="admin = !admin" src="assets/logo.svg" />
-    <h1 [class.admin]="admin">Backwarenbestellung</h1>
-    <div class="breadcrumb grow">
-      <span *ngIf="stage === 0">Datumsauswahl</span>
-      <span *ngIf="stage !== 0">
-        <a routerLink="/date">Datumsauswahl</a>
-        &gt;
-        <span>Warenauswahl</span>
-      </span>
-    </div>
-    <dlb-timer></dlb-timer>
+  <div class="container">
+    <nav>
+      <ul>
+        <li><img (dblclick)="admin = !admin" src="assets/logo.svg" /></li>
+        <li class="hide-md"><strong [class.admin]="admin">Backwarenbestellung</strong></li>
+      </ul>
+      <ul *ngIf="stage === 0">
+        <li><a role="button" class="unclickable" *ngIf="stage === 0"><em class="fas fa-calendar-day"></em></a></li>
+        <li><em class="fas fa-caret-right spacer"></em></li>
+        <li><a role="button" class="unclickable outline secondary"><em class="fas fa-shopping-cart"></em></a></li>
+      </ul>
+      <ul *ngIf="stage !== 0">
+        <li><a role="button" class="outline" routerLink="/date" aria-invalid="false"><em
+              class="fas fa-calendar-day"></em></a></li>
+        <li><em class="fas fa-caret-right spacer"></em></li>
+        <li><a role="button" class="unclickable"><em class="fas fa-shopping-cart"></em></a></li>
+      </ul>
+      <ul>
+        <li>
+          <dlb-timer></dlb-timer>
+        </li>
+      </ul>
+    </nav>
   </div>
 </div>
 <div class="spacer-top"></div>
