Changed date input label

--- a/dorfladen-frontend/src/app/datepicker/datepicker.component.html
+++ b/dorfladen-frontend/src/app/datepicker/datepicker.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <article>
-    <label for="date">Datum
+    <label for="date">Bestellung zum
       <input type="date" id="date" name="date" [min]="minDate" [(ngModel)]="startDate">
     </label>
 
