--- a/dorfladen-frontend/src/app/modals/confirmation-modal/confirmation-modal.component.html
+++ b/dorfladen-frontend/src/app/modals/confirmation-modal/confirmation-modal.component.html
@@ -2,8 +2,11 @@
   <header>Vielen Dank für deine Bestellung</header>
   <!-- Grid -->
   <canvas #barcode></canvas>
+  <canvas #qr></canvas>
+  <canvas #qrCode></canvas>
 
-  <p>Bitte bezahlen Sie an der Kasse oder wählen Sie 'Bei Abholung bezahlen' aus um an den entsprechenden Tagen zu bezahlen.</p>
+  <p>Bitte bezahlen Sie an der Kasse oder wählen Sie 'Bei Abholung bezahlen' aus um an den entsprechenden Tagen zu
+    bezahlen.</p>
   <footer class="flex space-between">
     <a role="button" class="secondary" (click)="close(undefined)">Bezahlt</a>
     <a role="button" class="secondary" (click)="close(undefined)">Bei Abholung bezahlen</a>
