--- a/dorfladen-frontend/src/app/app.component.scss
+++ b/dorfladen-frontend/src/app/app.component.scss
@@ -1,10 +1,16 @@
-.header {
+.header-container {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   background-color: var(--background-color);
-  border-bottom: 1px solid var(--secondary);
+
+  .header {
+    background-color: var(--background-color);
+    border-bottom: 1px solid var(--secondary);
+    z-index: 999;
+    position: relative;
+  }
 }
 
 img {
