--- a/dorfladen-frontend/src/app/selection/selection.component.html
+++ b/dorfladen-frontend/src/app/selection/selection.component.html
@@ -1,21 +1,22 @@
-<div class="main">
+<div class="main" [@slideInRightOnEnter]>
   <div class="container">
     <article *ngFor="let category of categories">
       <header>
         <em class="fas fa-{{category.categoryIcon}}"></em> {{category.title}}
       </header>
       <p *ngFor="let item of category.items">
-        <dlb-order-item  [item]="item"></dlb-order-item>
+        <dlb-order-item [item]="item"></dlb-order-item>
       </p>
     </article>
   </div>
 </div>
-<article class="footer">
+<article *ngIf="totalCount()" class="footer" [@slideInUpOnEnter]>
   <div class="grid">
     <div>Gesammt</div>
     <div></div>
     <div><span *ngIf="totalCount()">{{totalCount()}} stk.</span></div>
-    <div *ngIf="orderService.days.length > 1"><span *ngIf="totalCount()">x {{orderService.days.length}} tage</span></div>
+    <div *ngIf="orderService.days.length > 1"><span *ngIf="totalCount()">x {{orderService.days.length}} tage</span>
+    </div>
     <strong><u>{{totalPrice() | price}}</u></strong>
   </div>
   <div class="flex">
