--- a/dorfladen-frontend/src/app/common/components/alert/alert.component.scss
+++ b/dorfladen-frontend/src/app/common/components/alert/alert.component.scss
@@ -1,4 +1,4 @@
-@import "~@picocss/pico/scss/themes/default.scss";
+@import "~@picocss/pico/scss/themes/default/colors";
 
 .alert {
   border: 1px solid var(--primary);
