--- a/dorfladen-frontend/src/app/common/components/alert/alert.component.scss
+++ b/dorfladen-frontend/src/app/common/components/alert/alert.component.scss
@@ -11,8 +11,26 @@
   }
 }
 
+.info {
+  border-color: $primary-600;
+  background-color: $primary-200;
+  color: $black;
+}
+
+.success {
+  border-color: $green-600;
+  background-color: $green-200;
+  color: $black;
+}
+
 .warning {
   border-color: $amber-600;
   background-color: $amber-200;
+  color: $black;
+}
+
+.error {
+  border-color: $red-600;
+  background-color: $red-200;
   color: $black;
 }
