--- a/dorfladen-frontend/src/app/order-item/order-item.component.scss
+++ b/dorfladen-frontend/src/app/order-item/order-item.component.scss
@@ -10,4 +10,13 @@
   .price {
     margin-right: 1.5rem;
   }
+
+  em.comment {
+    margin-right: 1rem;
+    height: fit-content;
+  }
+}
+
+textarea {
+  margin-top: 1rem;
 }
